--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,34 @@
+body {
+    font-family: monospace;
+    font-size: medium;
+}
 .container {
     padding: 5px;;
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
 }
 
 div > h2 {
     border: 1px solid black;
     text-align: center;
+}
+
+#inputs {
+    margin: auto;
+    text-align: center;
+}
+#passwordDisplay {
+    height: 20px;
+    border: 1px solid black;
+}
+
+.btn {
+    display: inline-block;
+    margin-left: 73px;
+    margin-top: 11px;
+}
+
+input[type="range"] {
+    margin-left: 50px;
+    
 }
